Dom 실습 및 비동기

--- a/1week/Dom/index.html
+++ b/1week/Dom/index.html
@@ -23,6 +23,6 @@
     <p class="text-black">text-1</p>
     <p class="text-black">tsxt-2</p>
     <p class="text-black">text-3</p>
-    <script src="Dom.js"></script>
+    <script src="2.js"></script>
   </body>
 </html>
